--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ h2 {
   font-size: 34px;
 }
 
+.start-chat {
+    font-size: 19px;
+    margin: 15px 0px;
+}
+
 .centered {
   position: absolute;
   color: #ffffff;
